# obi-one

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: macos-installation.md
scripts/: fetch-pdfium.sh  package-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs  output.rs  processor.rs  settings.rs
ui/: index.html  main.js  styles.css
