[package]
name = "obi-one"
version = "0.1.0"
description = "Maisoku PDF batch processor"
authors = ["obi-one"]
edition = "2021"

[lib]
name = "obi_one_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dirs = "6.0.0"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
pdfium-render = "0.8.30"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.15.0"
